# cambridge

./: .gitignore  define.py  demo.py  dictionary.py  element.py  main.py  pyproject.toml  setup.py  target.json
src/cambridge/: __init__.py  define.py  dictionary.py  element.py
