[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-eggs"
version = "2020.0.0"
description = "Lovely Spam! Wonderful Spam!"
requires-python = ">= 3.8"
readme = "README.md"
dependencies = [
  "requests",
  "beautifulsoup4",
]
authors = [
  {name = "marcho", email = "marcho@gmail.com"},
]

[project.scripts]
cambridge-cli = "cambridge:main_cli"
